--- a/src/app/forum/Forum.css
+++ b/src/app/forum/Forum.css
@@ -1,12 +1,23 @@
+*{
+  --clr1 : #FFFFFF;
+  --clr2 : #E1E5F2;
+  --clr3 : #BFDBF7;
+  --clr4 : #1F7A8C;
+  --clr5 : #022B3A;
+}
 .ForumBody {
   padding: 10px;
   min-height: 100vh;
   min-width: 100%;
 }
 .ForumTile {
+  width: 90vw;
+  min-width: 300px;
+  max-width: 1000px;
   margin: 10px;
   min-height: 100px;
-  background-color: rgb(203, 203, 203);
+  border: 1px solid black;
+  background-color: var(--clr2);
   border-radius: 20px;
 }
 
@@ -26,11 +37,11 @@
   width: 10px;
   min-height: 10px;
   border-radius: 50px;
-  background-color: rgb(121, 121, 121);
+  background-color: var(--clr5);
 }
 .ForumImg {
   margin: 10px;
-  background-color: azure;
+  background-color: var(--clr5);
   height: 50px;
   width: 50px;
   border-radius: 50px;
@@ -55,6 +66,7 @@
 }
 
 .popupcomment{
+  z-index: 5;
   position: fixed;
   top: 0;
   left: 0;
@@ -67,24 +79,26 @@
 }
 
 .commentWindow{
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   height: 80vh;
   width: 80vw;
-  border-radius: 50px;
+  border-radius: 25px;
   border: 2px solid black;
-  background-color: #E1E5F2;
+  background-color: var(--clr1);
 }
 
 .closeButton{
-  height: 50px;
-  width: 50px;
+  height: 30px;
+  width: 30px;
   position: relative;
   right: 25px;
   top: 25px;
   border-radius: 25px;
   align-self: flex-end;
-  background-color: red;
+  background-color: var(--clr3);
+  border: 1px solid black;
 }
 
 /* CommentTile.css */
@@ -116,4 +130,31 @@
 
 .comment-details p {
   margin: 5px 0;
+}
+
+/* Add Forum CSS */
+.AddForumTile{
+  box-shadow: 0px 0px 100px 27px #000;
+  bottom: 10px;
+  position: fixed;
+  width: 90vw;
+  margin: 10px;
+  border-radius: 20px;
+  min-width: 300px;
+  max-width: 1000px;
+  border: 1px solid black;
+  background-color: var(--clr2);  
+}
+
+.inputaddForum{
+  background-color: var(--clr2);
+  height: 30px;
+}
+
+.UserIMGAddForum{
+  margin: 10px;
+  height: 50px;
+  width: 50px;
+  border-radius: 30px;
+  background-color: var(--clr5);
 }
