--- a/src/app/forum/Forum.css
+++ b/src/app/forum/Forum.css
@@ -1,9 +1,9 @@
-*{
-  --clr1 : #FFFFFF;
-  --clr2 : #E1E5F2;
-  --clr3 : #BFDBF7;
-  --clr4 : #1F7A8C;
-  --clr5 : #022B3A;
+* {
+  --clr1: #ffffff;
+  --clr2: #e1e5f2;
+  --clr3: #bfdbf7;
+  --clr4: #1f7a8c;
+  --clr5: #022b3a;
 }
 .ForumBody {
   padding: 10px;
@@ -22,24 +22,27 @@
 }
 
 .ForumDetails {
-  position: relative;
+  margin-top: 10px;
   margin-right: 10px;
-  border-radius: 20px;
 }
 
 .leftsection {
+  flex-shrink: 0;
+  width: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .line {
-  width: 10px;
+  width: 5px;
   min-height: 10px;
   border-radius: 50px;
-  background-color: var(--clr5);
+  height: 100%;
+  background-color: var(--clr4);
 }
 .ForumImg {
+  flex-shrink: 0;
   margin: 10px;
   background-color: var(--clr5);
   height: 50px;
@@ -47,25 +50,25 @@
   border-radius: 50px;
 }
 
-.LikeButton{
+.LikeButton {
   width: 20px;
   height: 20px;
 }
-.buttonhoverpointer{
+.buttonhoverpointer {
   cursor: pointer;
 }
 
-.bottomForum{
+.bottomForum {
   height: 40px;
   display: flex;
   align-self: flex-start;
 }
 
-.ForumButton{
+.ForumButton {
   margin-left: 30px;
 }
 
-.popupcomment{
+.popupcomment {
   z-index: 5;
   position: fixed;
   top: 0;
@@ -78,7 +81,7 @@
   align-items: center;
 }
 
-.commentWindow{
+.commentWindow {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -89,7 +92,7 @@
   background-color: var(--clr1);
 }
 
-.closeButton{
+.closeButton {
   height: 30px;
   width: 30px;
   position: relative;
@@ -133,7 +136,7 @@
 }
 
 /* Add Forum CSS */
-.AddForumTile{
+.AddForumTile {
   box-shadow: 0px 0px 100px 27px #000;
   bottom: 10px;
   position: fixed;
@@ -143,15 +146,15 @@
   min-width: 300px;
   max-width: 1000px;
   border: 1px solid black;
-  background-color: var(--clr2);  
+  background-color: var(--clr2);
 }
 
-.inputaddForum{
+.inputaddForum {
   background-color: var(--clr2);
   height: 30px;
 }
 
-.UserIMGAddForum{
+.UserIMGAddForum {
   margin: 10px;
   height: 50px;
   width: 50px;
