--- a/src/app/forum/Forum.css
+++ b/src/app/forum/Forum.css
@@ -22,6 +22,7 @@
 }
 
 .ForumDetails {
+  width: 100%;
   margin-top: 10px;
   margin-right: 10px;
 }
@@ -95,11 +96,10 @@
 }
 
 .closeButton {
+  margin: 10px;
   height: 30px;
   width: 30px;
-  position: relative;
-  right: 25px;
-  top: 25px;
+  position: relative;;
   border-radius: 25px;
   align-self: flex-end;
   background-color: var(--clr3);
@@ -152,14 +152,23 @@
 }
 
 .inputaddForum {
+  width: 100%;
   background-color: var(--clr2);
   height: 30px;
 }
 
 .UserIMGAddForum {
+  flex-shrink: 0;
   margin: 10px;
   height: 50px;
   width: 50px;
   border-radius: 30px;
   background-color: var(--clr5);
+}
+.submitButton{
+  flex-shrink: 0;
+  margin-right: 10px;
+  height: 30px;
+  width: 30px;
+  border-radius: 50px;
 }
