--- a/src/components/main.css
+++ b/src/components/main.css
@@ -18,14 +18,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border-radius: 10px;
-  box-shadow: 1px 1px 15.3px 2px rgba(42, 114, 128, 0.3);
+  border-radius: 20px;
+  box-shadow: 10px 10px 20.9px 10px rgba(42, 114, 128, 0.3);
   background-color: var(--clr1);
 }
 
 .IMGshopCard {
-  width: 150px;
-  height: 150px;
+  width: 200px;
+  height: 200px;
   object-fit: fill;
 }
 .BuyButton {
@@ -60,6 +60,7 @@
 
 /* HOME */
 .HomeMain {
+  background-color: transparent;
   overflow-x: hidden;
   width: 100%;
 }
@@ -100,7 +101,7 @@
 .hometitle:hover {
   border: 1px solid rgb(255, 255, 255, 0.5);
   backdrop-filter: blur(20px);
-  box-shadow: 0px 4px 80px 21px rgba(42, 114, 128, 0.5);
+  box-shadow: 0px 4px 20px 20px rgba(42, 114, 128, 0.);
 }
 @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap");
 .texttitle {
@@ -109,7 +110,6 @@
 }
 /* SERVICE CARDS */
 .HomeCard1 {
-  z-index: 5;
   min-height: 200px;
   margin-left: 10px;
   margin-right: 10px;
@@ -125,7 +125,7 @@
 .HomeCard1:hover {
   border: 1px solid rgb(255, 255, 255, 0.5);
   backdrop-filter: blur(20px);
-  box-shadow: 0px 4px 80px 21px rgba(42, 114, 128, 0.5);
+  box-shadow: 0px 4px 10px 2px rgba(42, 114, 128, 0.5);
 }
 
 .HomeCardDetails {
@@ -156,4 +156,19 @@
     backdrop-filter: blur(20px);
     box-shadow: 0px 4px 80px 21px rgba(42, 114, 128, 0.5);
   }
+}
+
+.explorebutton {
+  padding: 10px;
+  display: flex;
+  font-size: 30px;
+  border-radius: 50px;
+  padding-left: 30px;
+  padding-right: 30px;
+  color: var(--clr5);
+  background-color: var(--clr1);
+}
+.ExploreSection{
+  padding-top: 30px;
+  min-height: 100vh;
 }
