--- a/src/components/main.css
+++ b/src/components/main.css
@@ -168,6 +168,7 @@
   border-radius: 25px;
   padding-left: 15px;
   padding-right: 15px;
+  margin-top:15px ;
   color: var(--clr5);
   background-color: var(--clr1);
 }
