--- a/src/components/main.css
+++ b/src/components/main.css
@@ -153,6 +153,12 @@
 }
 
 @media (max-width: 768px) {
+
+  .logonavbar{
+    height: 30px;
+    margin-right: -20px;
+    margin-left: -10px;
+  }
   
   .HomeCard1 {
     border: 1px solid rgb(255, 255, 255, 0.5);
